Slider ok without taglines and dots

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             rel="stylesheet"
         />
     </head>
-    <body>
+    <body onload="initslider()">
         <header class="container">
             <h1>
                 <img
@@ -24,7 +24,7 @@
             <a class="btn devis" href="mailto:contact@print-it.tld">Devis</a>
         </header>
         <main>
-            <section onload="initslider()">
+            <section>
                 <div class="banner slider-container">
                     <img
                         class="arrow arrow-left"
@@ -43,6 +43,7 @@
                             Impressions tous formats
                             <span>en boutique et en ligne</span>
                         </p>
+
                         <div class="dots"></div>
                     </div>
 
