taglines are working

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             class="slide"
                             src="./assets/images/slideshow/slide1.jpg"
                         />
-                        <p>
+                        <p id="tagline" class="tagline">
                             Impressions tous formats
                             <span>en boutique et en ligne</span>
                         </p>
