Dots and taglines are both working

--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
                             <span>en boutique et en ligne</span>
                         </p>
 
-                        <div class="dots"></div>
+                        <div class="dots">
+                            <div class="dot" data-index="1">&nbsp;</div>
+                            <div class="dot" data-index="2">&nbsp;</div>
+                            <div class="dot" data-index="3">&nbsp;</div>
+                            <div class="dot" data-index="4">&nbsp;</div>
+                        </div>
                     </div>
 
                     <img
